hw_06/auth-service-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app
  namespace: m
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-app
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: app
          image: nislovskaya/hw_06-auth:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  namespace: m
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: app
          image: nislovskaya/hw_06-user:latest
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
          readinessProbe:
            httpGet:
              path: /health
              port: 8082

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-validator
  namespace: m
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jwt-validator
  template:
    metadata:
      labels:
        app: jwt-validator
    spec:
      containers:
        - name: jwt-validator
          image: nislovskaya/hw_06-jwt:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
