hw_06/auth-service-chart/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-postgresql
  namespace: m
spec:
  serviceName: "auth-postgresql"
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgresql
  template:
    metadata:
      labels:
        app: auth-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-postgresql
  namespace: m
spec:
  serviceName: "user-postgresql"
  replicas: 1
  selector:
    matchLabels:
      app: user-postgresql
  template:
    metadata:
      labels:
        app: user-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
