hw_06/auth-service-chart/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-postgresql
  namespace: m
spec:
  selector:
    app: auth-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: user-postgresql
  namespace: m
spec:
  selector:
    app: user-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
