hw_06/auth-service-chart/templates/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: m
spec:
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    app: kafka

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: m
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: m
spec:
  ports:
    - port: 2181
      targetPort: 2181
      protocol: TCP
  selector:
    app: zookeeper

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: m
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:latest
          ports:
            - containerPort: 2181
