hw_06/auth-service-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: m
spec:
  selector:
    app: auth-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: m
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
